05 notebook ok & re-organized models

--- a/notebooks/05_risk_calculator.ipynb
+++ b/notebooks/05_risk_calculator.ipynb
@@ -45,6 +45,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from typing import Dict, Any, Tuple\n",
+    "from typing import Dict\n",
+    "\n",
     "\n",
     "pd.set_option(\"display.max_columns\", 50)"
    ]
@@ -66,25 +68,44 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../config.yaml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# --- Load config.yaml\u001b[39;00m\n\u001b[0;32m      2\u001b[0m CONFIG_PATH \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../config.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# notebook lives in notebooks/\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(CONFIG_PATH, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      4\u001b[0m     config \u001b[38;5;241m=\u001b[39m yaml\u001b[38;5;241m.\u001b[39msafe_load(f)\n\u001b[0;32m      6\u001b[0m config\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../config.yaml'"
-     ]
+     "data": {
+      "text/plain": [
+       "(WindowsPath('C:/Users/Marta/ironhack/final_project/wine-analysis-project'),\n",
+       " {'paths': {'raw_data': 'data/raw', 'processed_data': 'data/processed'},\n",
+       "  'files': {'wine_quality': 'WineQT.csv',\n",
+       "   'wine_reviews': 'winemag-data-130k-v2.csv'}})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# --- Load config.yaml\n",
-    "CONFIG_PATH = \"../config.yaml\"  # notebook lives in notebooks/\n",
+    "from pathlib import Path\n",
+    "import yaml\n",
+    "\n",
+    "# Dynamically find project root (folder that contains config.yaml)\n",
+    "current_path = Path.cwd()\n",
+    "\n",
+    "project_root = None\n",
+    "for parent in [current_path] + list(current_path.parents):\n",
+    "    if (parent / \"config.yaml\").exists():\n",
+    "        project_root = parent\n",
+    "        break\n",
+    "\n",
+    "if project_root is None:\n",
+    "    raise FileNotFoundError(\n",
+    "        \"config.yaml not found. Make sure you are inside the project directory.\"\n",
+    "    )\n",
+    "\n",
+    "CONFIG_PATH = project_root / \"config.yaml\"\n",
+    "\n",
     "with open(CONFIG_PATH, \"r\") as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
-    "config"
+    "project_root, config\n",
+    "\n"
    ]
   },
   {
@@ -104,10 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b4b919bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('../models/logreg_risk_pipeline_calibrated.joblib',\n",
+       " '../models/risk_thresholds.joblib')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# --- Resolve artifact paths\n",
     "# Expected keys in config.yaml (recommended):\n",
@@ -133,16 +166,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1f84e088",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(sklearn.calibration.CalibratedClassifierCV,\n",
+       " {'risk_threshold': 5,\n",
+       "  'decision_threshold': np.float64(0.28422362491108477),\n",
+       "  'target_recall': 0.9})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import joblib\n",
+    "\n",
     "# --- Load artifacts\n",
+    "CALIBRATED_MODEL_PATH = project_root / \"models\" / \"logreg_risk_pipeline_calibrated.joblib\"\n",
+    "THRESHOLDS_PATH = project_root / \"models\" / \"risk_thresholds.joblib\"\n",
+    "\n",
     "risk_model = joblib.load(CALIBRATED_MODEL_PATH)\n",
     "thresholds = joblib.load(THRESHOLDS_PATH)\n",
     "\n",
-    "type(risk_model), thresholds"
+    "type(risk_model), thresholds\n"
    ]
   },
   {
@@ -171,10 +223,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1ad26539",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0            1.0               1.0          1.0             1.0        1.0   \n",
+       "\n",
+       "   free sulfur dioxide  total sulfur dioxide  density   pH  sulphates  alcohol  \n",
+       "0                  1.0                   1.0      1.0  1.0        1.0      1.0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "FEATURES = [\n",
     "    \"fixed acidity\",\n",
@@ -222,10 +340,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b21ae24c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_operating_threshold(thresholds_obj: Any, default: float = 0.5) -> float:\n",
     "    \"\"\"Extract the chosen threshold from the saved thresholds artifact.\"\"\"\n",
@@ -250,10 +379,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0155116d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'risk_probability': 0.7402152420971817,\n",
+       " 'risk_label': 'High risk',\n",
+       " 'threshold': 0.5}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def predict_risk(\n",
     "    wine_features: Dict[str, Any],\n",
@@ -319,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e5e0d38f",
    "metadata": {},
    "outputs": [],
@@ -356,10 +498,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0f8c542f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wine_id</th>\n",
+       "      <th>risk_probability</th>\n",
+       "      <th>risk_label</th>\n",
+       "      <th>threshold</th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.934797</td>\n",
+       "      <td>High risk</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>0.9980</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.880930</td>\n",
+       "      <td>High risk</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>0.9982</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>9.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.493377</td>\n",
+       "      <td>Low risk</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.9968</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>10.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.086695</td>\n",
+       "      <td>Low risk</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.9959</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.061579</td>\n",
+       "      <td>Low risk</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.9955</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>12.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   wine_id  risk_probability risk_label  threshold  fixed acidity  \\\n",
+       "0        1          0.934797  High risk        0.5            7.2   \n",
+       "3        4          0.880930  High risk        0.5            6.8   \n",
+       "2        3          0.493377   Low risk        0.5            8.0   \n",
+       "4        5          0.086695   Low risk        0.5            7.1   \n",
+       "1        2          0.061579   Low risk        0.5            7.5   \n",
+       "\n",
+       "   volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0              0.85         0.02             2.0      0.080   \n",
+       "3              0.65         0.10             1.8      0.095   \n",
+       "2              0.55         0.20             2.2      0.065   \n",
+       "4              0.40         0.25             2.1      0.055   \n",
+       "1              0.35         0.30             2.4      0.050   \n",
+       "\n",
+       "   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                 10.0                  85.0   0.9980  3.45       0.55   \n",
+       "3                 12.0                  95.0   0.9982  3.48       0.52   \n",
+       "2                 15.0                  60.0   0.9968  3.30       0.60   \n",
+       "4                 20.0                  50.0   0.9959  3.28       0.78   \n",
+       "1                 18.0                  45.0   0.9955  3.25       0.70   \n",
+       "\n",
+       "   alcohol  \n",
+       "0      9.0  \n",
+       "3      9.6  \n",
+       "2     10.5  \n",
+       "4     12.0  \n",
+       "1     12.5  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "example_wines = [\n",
     "    # A) Higher volatile acidity + higher total SO2 + lower alcohol (often higher risk)\n",
@@ -453,10 +763,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cf4871e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "import joblib\n",
+      "import pandas as pd\n",
+      "\n",
+      "risk_model = joblib.load(\"models/logreg_risk_pipeline_calibrated.joblib\")\n",
+      "thresholds = joblib.load(\"models/risk_thresholds.joblib\")\n",
+      "\n",
+      "FEATURES = [\n",
+      "    \"fixed acidity\",\"volatile acidity\",\"citric acid\",\"residual sugar\",\"chlorides\",\n",
+      "    \"free sulfur dioxide\",\"total sulfur dioxide\",\"density\",\"pH\",\"sulphates\",\"alcohol\"\n",
+      "]\n",
+      "\n",
+      "def validate_and_build_df(x):\n",
+      "    missing = [c for c in FEATURES if c not in x]\n",
+      "    if missing:\n",
+      "        raise ValueError(f\"Missing required feature(s): {missing}\")\n",
+      "    row = {c: float(x[c]) for c in FEATURES}\n",
+      "    return pd.DataFrame([row], columns=FEATURES)\n",
+      "\n",
+      "def get_operating_threshold(thresholds_obj, default=0.5):\n",
+      "    if isinstance(thresholds_obj, dict):\n",
+      "        for k in [\"selected_threshold\", \"threshold\", \"best_threshold\", \"recall_threshold\"]:\n",
+      "            if k in thresholds_obj:\n",
+      "                return float(thresholds_obj[k])\n",
+      "    if isinstance(thresholds_obj, (float, int)):\n",
+      "        return float(thresholds_obj)\n",
+      "    return float(default)\n",
+      "\n",
+      "OPERATING_THRESHOLD = get_operating_threshold(thresholds, default=0.5)\n",
+      "\n",
+      "def predict_risk(wine_features, model=risk_model, threshold=OPERATING_THRESHOLD):\n",
+      "    X = validate_and_build_df(wine_features)\n",
+      "    p = float(model.predict_proba(X)[:, 1][0])\n",
+      "    label = \"High risk\" if p >= threshold else \"Low risk\"\n",
+      "    return {\"risk_probability\": p, \"risk_label\": label, \"threshold\": float(threshold)}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "export_snippet = '''\n",
     "import joblib\n",
@@ -496,6 +849,14 @@
     "'''\n",
     "print(export_snippet)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8f7902a-6ed9-4ed3-9fbf-b67165cec46f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
