--- a/notebooks/05_risk_calculator.ipynb
+++ b/notebooks/05_risk_calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4bbe3d5",
+   "id": "32f701ef-4d3d-458a-b0a5-a6ac00a184d8",
    "metadata": {},
    "source": [
     "# 05 — Wine Risk Calculator (Low Technical Quality)\n",
@@ -17,14 +17,14 @@
     "**Business objective**\n",
     "\n",
     "- Minimize **false negatives** (missing a low-quality wine is more costly than raising a false alarm).\n",
-    "- Use **calibrated probabilities** and a **recall-oriented threshold**.\n",
+    "- Use **model probability estimates** and a **recall-oriented threshold**.\n",
     "\n",
     "---\n",
     "\n",
     "## Outputs\n",
     "\n",
     "- `predict_risk()` function:\n",
-    "  - returns calibrated probability of **High risk**\n",
+    "  - returns probability of **High risk**\n",
     "  - returns risk label (`\"High risk\"` / `\"Low risk\"`)\n",
     "  - returns decision threshold used\n",
     "- Example scenarios (3–5 hypothetical wines)"
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "24f319c3",
+   "execution_count": null,
+   "id": "95f4bea8-5010-4757-ba17-56decc3193fa",
    "metadata": {},
    "outputs": [],
    "source": [
