--- a/notebooks/02_wine_quality_model.ipynb
+++ b/notebooks/02_wine_quality_model.ipynb
@@ -367,10 +367,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc3f881-3049-4a95-b56c-4d71eb4bef6f",
+   "id": "726489ba-bf63-4d05-b060-7dcbcb42c9eb",
    "metadata": {},
    "source": [
-    "## 5. Baseline Risk Model\n",
+    "## 5. Baseline Risk Model - Logistic Regression\n",
     "\n",
     "This section trains an interpretable baseline classifier to predict **low-quality risk** based exclusively on physicochemical features.\n",
     "\n",
@@ -862,10 +862,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f3561b8-3ef7-4f31-90e1-87c3e2279861",
+   "id": "dc05313d-f773-4158-a32a-bc913d37f960",
    "metadata": {},
    "source": [
-    "## 6. Baseline Evaluation (Test Set)\n",
+    "## 6. Baseline Evaluation (Test Set) - Recall\n",
     "\n",
     "The baseline model is evaluated on the held-out test set to estimate generalization performance.\n",
     "Given the business objective (minimize false negatives), the primary focus is **recall for the high-risk class** (`risk = 1`).\n",
