--- a/notebooks/04_model_comparison.ipynb
+++ b/notebooks/04_model_comparison.ipynb
@@ -3265,12 +3265,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84d8801d-ac1f-4ecc-bb8e-88f85c9fcf83",
+   "cell_type": "markdown",
+   "id": "0be9f04b-b3cd-430b-bfc5-7434def34d2a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## FINAL MODEL COMPARISON TABLE"
+   ]
   },
   {
    "cell_type": "code",
@@ -3508,6 +3508,14 @@
     "\n",
     "comparison_df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac9591a6-0fdc-4da4-b714-052663153137",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
