--- a/notebooks/04_model_comparison.ipynb
+++ b/notebooks/04_model_comparison.ipynb
@@ -1252,6 +1252,8 @@
     "plt.xlabel(\"Odds Ratio\")\n",
     "plt.title(\"Odds Ratios for High-Risk Prediction (Logistic Regression)\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"../figures/odds_ratios.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "\n",
     "plt.show()\n"
    ]
   },
@@ -3731,7 +3733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "a8b6bb2c-bce4-4074-8472-b4218c318c8d",
    "metadata": {},
    "outputs": [
